--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(https://media.istockphoto.com/videos/4k-abstract-particle-wave-bokeh-background-blue-water-snow-beautiful-video-id1199496434?s=640x640) top center;
+  background: url(https://i.imgur.com/7VMdyvP.jpg) top center;
   background-size: cover;
 }
 
